--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1770,3 +1770,27 @@ footer ul li a i{
 
 }
 
+.dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+.dropdown-content {
+display: none;
+right: 0;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 240px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+padding: 12px 16px;
+z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+
+.dropdown:hover .dropdown-content a:hover, button:hover{
+	color: #111;
+}
+
