--- a/public/css/style.css
+++ b/public/css/style.css
@@ -600,7 +600,7 @@ section#services {
     background-color: rgb(255, 255, 255);
     border: 0 none;
     border-radius: 0;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     padding: 0 0 2px !important;
     margin-bottom: 0;
